<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/menu_laporan"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_laporan" />

        <item
            android:id="@+id/menu_users"
            android:icon="@drawable/ic_people"
            android:title="@string/nav_user" />

    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/menu_password"
                android:icon="@drawable/ic_baseline_vpn_key_24"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>