<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/loginLogin"
        android:textColor="@color/colorGrey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginHi"
        android:textColor="@color/colorDark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/loginWelcome"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPleaseSignIn"
        android:textColor="@color/colorDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/loginEmail"
        android:textColorHint="@color/colorDark"
        app:boxBackgroundColor="@color/colorWhite"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/loginPasswordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorWhite"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/loginPassword"
        android:textColorHint="@color/colorDark"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInput"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:startIconTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginTextLupaPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loginLupaPassword"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButtonLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loginLoginButtonText"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/loginTextLupaPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginTextLupaPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>