<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profileFABSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorSuccess"
        android:foregroundTint="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_24"
        app:tint="@color/colorWhite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profileFABEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:foregroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        app:tint="@color/colorWhite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profileFABCancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorDanger"
        android:foregroundTint="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/profileFABSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_clear_24"
        app:tint="@color/colorWhite" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/profileImageDescription"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:maxLines="2"
                android:text="@string/profile_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="@+id/profileImage" />

            <TextView
                android:id="@+id/profileLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/profileLevel"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/profileImage"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileUsername" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="15dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toStartOf="@+id/cardView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="22dp"
                        android:contentDescription="@string/profileIconPeople"
                        android:src="@drawable/ic_people"
                        android:tint="@color/colorWhite"
                        app:layout_constraintBottom_toTopOf="@+id/profileTotalUser"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profileTotalUser"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/profileTotalUser"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/imageView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="15dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/view4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="22dp"
                        android:contentDescription="@string/profileIconPeople"
                        android:src="@drawable/ic_library"
                        android:tint="@color/colorWhite"
                        app:layout_constraintBottom_toTopOf="@+id/profileTotalLaporan"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profileTotalLaporan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:maxLines="2"
                        android:text="@string/profileTotalLaporan"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toTopOf="@+id/imageView5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileUsernameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:hint="Username"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:startIconDrawable="@drawable/ic_people">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="text"
                    android:text="username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileEmailInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="Email"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileUsernameInput"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:text="email@email.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileNIKInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="NIK"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileEmailInput"
                app:startIconDrawable="@drawable/ic_baseline_credit_card_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="number"
                    android:text="35091299319239239" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profilePhoneInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="Phone"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileNIKInput"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="phone"
                    android:text="0812345678" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profileInputAlamat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:hint="Alamat"
                app:boxStrokeColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePhoneInput"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false"
                    android:inputType="textPostalAddress"
                    android:text="Jl Jalan 99" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>